--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
   <div class="nav__links nav__links-mobile">
     <a href="#" class="nav__link">About</a>
-    <a href="#" class="nav__link">Serives</a>
+    <a href="#" class="nav__link">Services</a>
     <a href="#" class="nav__link">Projects</a>
     <a href="#" class="nav__link">Contact</a>
   </div>
 
   <div class="nav__links nav__links-desktop">
     <a href="#" class="nav__link">About</a>
-    <a href="#" class="nav__link">Serives</a>
+    <a href="#" class="nav__link">Services</a>
     <a href="#" class="nav__link">Projects</a>
     <a href="#" class="nav__link">Contact</a>
   </div>
