--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <nav class="nav">
   <a href="#" class="nav__logo"><img src="./images/logo.svg" alt="Sunnyside - website's logo" class="nav__logo-img"></a>
 
-  <button class="nav__burger-btn">
+  <button class="nav__burger-btn" aria-expanded="false">
     <img src="./images/icon-hamburger.svg" alt="" class="nav__burger-btn-img">
   </button>
 
@@ -35,12 +35,24 @@
 </nav>
 </div>
 
-  <!-- About
-  Services
-  Projects
-  Contact
+<header class="header">
+  <h1 class="header__title">We are creatives</h1>
+  <img src="./images/icon-arrow-down.svg" alt="" class="header__arrow">
+</header>
 
-  We are creatives
+<main>
+  <section class="images">
+    <img src="./images/mobile/image-transform.jpg" alt="An egg on the yellow background" class="images__img-yellow mobile-visible">
+    <img src="./images/desktop/image-transform.jpg" alt="An egg on the yellow background" class="images__img-yellow desktop-visible">
+
+    <div class="images__yellow-info">
+      
+    </div>
+  </section>
+</main>
+
+  <!--
+
 
   Transform your brand
 
@@ -82,6 +94,8 @@
 
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.  -->
-  </div>
+  <!-- </div> -->
+
+  <script src="./js/app.js"></script>
 </body>
 </html>
