finished first two images

--- a/index.html
+++ b/index.html
@@ -42,11 +42,36 @@
 
 <main>
   <section class="images">
-    <img src="./images/mobile/image-transform.jpg" alt="An egg on the yellow background" class="images__img-yellow mobile-visible">
-    <img src="./images/desktop/image-transform.jpg" alt="An egg on the yellow background" class="images__img-yellow desktop-visible">
+    <img src="./images/mobile/image-transform.jpg" alt="An egg on the yellow background" class="images__img images__img-yellow mobile-visible">
+    <img src="./images/desktop/image-transform.jpg" alt="An egg on the yellow background" class="images__img images__img-yellow desktop-visible">
 
     <div class="images__yellow-info">
-      
+      <h2 class="images__title">Transform your brand</h2>
+      <p class="images__text"> We are a full-service creative agency specializing in helping brands grow fast. 
+      Engage your clients through compelling visuals that do most of the marketing for you.
+      </p>
+      <a href="#" class="images__link images__link--yellow">learn more</a>
+    </div>
+
+    <img src="./images/mobile/image-stand-out.jpg" alt="Pink glass on pink background" class="images__img images__img-pink mobile-visible">
+    <img src="./images/desktop/image-stand-out.jpg" alt="Pink glass on pink background" class="images__img images__img-pink desktop-visible">
+
+    <div class="images__pink-info">
+      <h2 class="images__title">Stand out to the right audience</h2>
+      <p class="images__text">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
+      </p>
+      <a href="#" class="images__link images__link--pink">learn more</a>
+    </div>
+
+    <div class="images__img images__img-green">
+      <h3 class="images__subtitle">Graphic design</h3>
+      <p class="images__subtext">Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
+    </div>
+
+    <div class="images__img images__img-blue">
+      <h3 class="images__subtitle">Photography</h3>
+      <p class="images__subtext">Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
+      </p>
     </div>
   </section>
 </main>
@@ -54,24 +79,16 @@
   <!--
 
 
-  Transform your brand
+  
 
-  We are a full-service creative agency specializing in helping brands grow fast. 
-  Engage your clients through compelling visuals that do most of the marketing for you.
 
-  Learn more
 
-  Stand out to the right audience
+ 
 
-  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
 
-  Learn more
 
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
 
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
+
 
   Client testimonials
 
