--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="wrapper">
+
 <nav class="nav">
+  <div class="wrapper">
   <a href="#" class="nav__logo"><img src="./images/logo.svg" alt="Sunnyside - website's logo" class="nav__logo-img"></a>
 
   <button class="nav__burger-btn" aria-expanded="false">
@@ -32,16 +33,17 @@
     <a href="#" class="nav__link">Projects</a>
     <a href="#" class="nav__link">Contact</a>
   </div>
-</nav>
 </div>
+</nav>
 
 <header class="header">
   <h1 class="header__title">We are creatives</h1>
-  <img src="./images/icon-arrow-down.svg" alt="" class="header__arrow">
+  <a href="#images"><img src="./images/icon-arrow-down.svg" alt="" class="header__arrow"></a>
 </header>
 
 <main>
-  <section class="images">
+  <div class="wrapper images__wrapper">
+  <section class="images" id="images">
     <img src="./images/mobile/image-transform.jpg" alt="An egg on the yellow background" class="images__img images__img-yellow mobile-visible">
     <img src="./images/desktop/image-transform.jpg" alt="An egg on the yellow background" class="images__img images__img-yellow desktop-visible">
 
@@ -73,10 +75,59 @@
       <p class="images__subtext">Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
       </p>
     </div>
+  </div>
+  </section>
+
+  <section class="testimonials">
+    <div class="wrapper">
+      <h4 class="testimonials__title">Client testimonials</h4>
+      <div class="testimonials__box">
+
+        <div class="testimonials__card">
+          <img src="./images/image-emily.jpg" alt="Young, blonde woman's sitting against the background of rocks" class="testimonials__img">
+          <div class="testimonials__card-body">
+          <p class="testimonials__text">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+          <div class="testimonials__info">
+            <span class="testimonials__name">Emily R.</span>
+            <p class="testimonials__info-subtitle">Marketing Director</p>
+          </div>
+        </div>
+        </div>
+
+        <div class="testimonials__card">
+          <img src="./images/image-thomas.jpg" alt="Dark complexion man is looking straight and smiling" class="testimonials__img">
+          <div class="testimonials__card-body">
+          <p class="testimonials__text">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+          <div class="testimonials__info">
+            <span class="testimonials__name">Thomas S.</span>
+            <p class="testimonials__info-subtitle">Chief Operating Officer</p>
+          </div>
+
+          </div>
+        </div>
+
+        <div class="testimonials__card">
+          <img src="./images/image-jennie.jpg" alt="Woman is looking straight, and staying against the background of sea" class="testimonials__img">
+          <div class="testimonials__card-body">
+          <p class="testimonials__text">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+          <div class="testimonials__info">
+            <span class="testimonials__name">Jennie F.</span>
+            <p class="testimonials__info-subtitle">Buisness Owner</p>
+          </div>
+            </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <section class="gallery">
+    <img src="" alt="Some bottles with red cap" class="gallery__img gallery__img--first">
+    <img src="" alt="" class="gallery__img gallery__img--second">
+    <img src="" alt="" class="gallery__img gallery__img--third">
+    <img src="" alt="" class="gallery__img gallery__img--fourth">
   </section>
 </main>
-
-  <!--
 
 
   
@@ -90,24 +141,19 @@
 
 
 
-  Client testimonials
+  
 
-  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-  Emily R.
-  Marketing Director
+ 
+  
 
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-  Thomas S.
-  Chief Operating Officer
+  
+  
 
-  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-  Jennie F.
-  Business Owner
+  
+  
+  
 
-  About
-  Services
-  Projects
-  Contact -->
+ 
 
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.  -->
